--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dev_dependencies:
 
 
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
 
 # The following section is specific to Flutter packages.
 flutter:
